--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,25 +1,39 @@
-<div class="border-green-500 p-8 border-t-12 bg-white mb-12 rounded-lg shadow-lg">
-  
-<table>
+<div class="card">
+<div class="card-header">
+<%= link_to 'Nova Tarefa', new_task_path, class: "float-right my-2 btn btn-success" %>
+</div>
+<div class="card-body">
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Tarefa</th>
-      <th>Prioridade</th>
-      <th>Termina às:</th>
-      <th colspan="3">Ações</th>
+      <th>Status</th>
+      <th scope="col">Tarefa</th>
+      <th scope="col">Prioridade</th>
+      <th scope="col" colspan="3">Ações</th>
     </tr>
   </thead>
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
+        <td>
+        <% if task.status == 'ativa' %>
+          <input id="task_<%= task.id %>" class="finish_task" type="checkbox" value="<%= task.id %>">
+        <% else%>
+         <input id="task_<%= task.id %>" class="finish_task" type="checkbox" value="<%= task.id %>" checked>
+        <% end %>
+        </td>
         <td><%= task.body %></td>
-        <td><%= task.priority %></td>
+        <td><label class="badge badge-secondary"><%= task.priority %></label</td>
         <td><%= task.finish_at %></td>
-        <td><%= link_to 'Show', task, class: "bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" %></td>
-        <td><%= link_to 'Edit', edit_task_path(task), class: "bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, class: "bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" %></td>
+        <td><%= link_to 'Visualizar', task, class: "btn btn-info" %></td>
+        <td><%= link_to 'Editar', edit_task_path(task), class: "btn btn-warning" %></td>
+        <td><%= link_to 'Remover', task, method: :delete, data: { confirm: 'Você tem certeza?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+</div>
+<div class="card-footer">
+<%= will_paginate @tasks, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+</div>
 </div>
