--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Task</h1>
-
-<%= render 'form', task: @task %>
-
-<%= link_to 'Back', tasks_path %>
+<div class="card">
+  <%= render 'form', task: @task %>
+  <div class="card-footer">
+    <%= link_to 'Voltar', tasks_path %>
+  </div>
+</div>
