add task views edit, show

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -6,6 +6,4 @@
 
 @import "~bootstrap/scss/bootstrap";
 
-.overline {
-  text-decoration: overline;
-}
+@import "tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.min.css";
