--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Task</h1>
-
-<%= render 'form', task: @task %>
-
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+<div class="card">
+  <%= render 'form', task: @task %>
+  <div class="card-footer">
+    <%= link_to 'Visualizar', @task, class: "btn btn-info" %>
+    <%= link_to 'Voltar', tasks_path, class: "btn btn-secondary" %>
+  </div>
+</div>
