--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <%= render 'form', task: @task %>
   <div class="card-footer">
-    <%= link_to 'Voltar', tasks_path %>
+    <%= link_to 'Voltar', tasks_path, class: "btn btn-secondary" %>
   </div>
 </div>
