--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,24 +1,37 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Body:</strong>
+<div class="card">
+<div class="card-body">
+<div id="notice"><%= notice %></div>
+<div class="form-group">
+  <strong>Descrição da Tarefa:</strong>
+  <textarea class="form-control" disabled>
   <%= @task.body %>
-</p>
+  </textarea>
+</div>
 
-<p>
-  <strong>Priority:</strong>
-  <%= @task.priority %>
-</p>
+<div class="form-group">
+  <strong>Prioridade</strong>
+  <input class="form-control" value="<%= @task.priority %>" disabled>
+</div>
 
-<p>
-  <strong>Finish at:</strong>
-  <%= @task.finish_at %>
-</p>
+<div class="form-group">
+    <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+      <input type="text" disabled name="task[finish_at]" value="<%= @task.finish_at %>" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
+      <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+      </div>
+    </div>
+  </div>
 
-<p>
-  <strong>User:</strong>
-  <%= @task.user %>
-</p>
-
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+</div>
+<div class="card-footer">
+  <%= link_to 'Editar', edit_task_path(@task), class: "btn btn-warning" %>
+  <%= link_to 'Voltar', tasks_path, class: "btn btn-secondary" %>
+</div>
+</div>
+<script type="text/javascript">
+  $(function () {
+    $('#datetimepicker1').datetimepicker({
+      format: "YYYY-MM-DD hh:mm:ss"
+    });
+  });
+</script>
